# HID-v2

./: .env.example  .gitignore  Makefile  README.md  build.spec  config.yaml  hid_shield.db  main.py  pyproject.toml  requirements.txt  run_as_admin.bat  test_dashboard.py  test_monitor.py  test_ui.py  website_full_detail.md
ai_agent/: __init__.py  advisory_service.py  autonomous_agent.py  config.py  detection_gap_analyzer.py  explanation_agent.py  file_analysis.py  mitre_mapper.py  report_generator.py  retrieval.py
core/: __init__.py  device_info.py  event_bus.py  port_lockdown.py  usb_monitor.py
database/: __init__.py  db.py  models.py  repository.py
installer/: Apply-USBIsolationPolicy.ps1  Build-Installer.ps1  Enable-WindowsSandbox.ps1  HIDShield-USB-Analysis.wsb  HIDShield.iss  Install-HIDShield.ps1
installer/package/: Install-HIDShield.ps1
ml/: __init__.py  classifier.py  feature_extractor.py  lightgbm_classifier.py  mock_classifier.py  random_forest_classifier.py  train_model.py
ml/models/: __init__.py  hid_shield_model.txt  rf_threat_model.joblib
reports/: __init__.py  pdf_exporter.py
sandbox/: __init__.py  entropy_analyzer.py  file_scanner.py  hid_descriptor_analyzer.py  pe_analyzer.py  sandbox_manager.py  windows_sandbox_bridge.py
security/: __init__.py  access_controller.py  auth_manager.py  policy_engine.py  session_manager.py  whitelist_manager.py
tests/: __init__.py  test_ai_advisory_service.py  test_ai_file_analysis.py  test_classifier.py  test_entropy_analyzer.py  test_integration.py  test_pe_analyzer.py  test_port_lockdown_isolation.py  test_sandbox_entropy_analyzer.py  test_sandbox_file_scanner_advanced.py  test_sandbox_manager.py  test_sandbox_manager_advanced.py  test_sandbox_pe_analyzer.py  test_security_patches.py  test_usb_monitor.py  test_windows_sandbox_bridge.py
ui/: __init__.py  autonomous_report_screen.py  dashboard.py  decision_panel.py  login_dialog.py  logs_screen.py  main_window.py  settings_screen.py  threat_analysis.py  usb_detection.py
ui/styles/: __init__.py  base.qss  theme.py
ui/widgets/: __init__.py  animated_button.py  detail_panel.py  file_approval_table.py  file_tree_widget.py  glass_card.py  log_table_widget.py  particle_background.py  pipeline_widget.py  risk_gauge.py  security_key_dialog.py  threat_badge.py
